fixed buttons on mobile and tablet, fixed sorting after create element, fixed some other bugs

--- a/todo-listApp/src/styles/create-popup.css
+++ b/todo-listApp/src/styles/create-popup.css
@@ -46,6 +46,7 @@
 
 .create-item__button {
   border: none;
+  background-color: aliceblue;
   border-radius: 5px;
   width: 35%;
   text-transform: uppercase;
